添加了用户登录、获取token、解析Token、Md5 功能
